tests/error/type_match/if_expr_no_else.bz
function test(b: bool)
{
	let _ = if (b) {
		0
	};
}
